# SaturnEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_SEBUILDER.txt  SEBUILDER_COMPLETION_REPORT.md  SEBUILDER_FINAL_SUMMARY.md  SEBUILDER_IMPLEMENTATION_SUMMARY.md  SEBUILDER_PARAM_REFERENCE.txt  SEBUILDER_QUICKSTART.md  SEBUILDER_QUOTED_PARAMS.md  SEBuilder.config.json  SEBuilder_Documentation.md  SaturnEngine.sln  test_quoted_parameters.ps1  test_sebuilder.ps1
AvaloniaTest/AvaloniaTest/: App.axaml.cs  AvaloniaTest.csproj  ViewLocator.cs
AvaloniaTest/AvaloniaTest.Android/: AvaloniaTest.Android.csproj  MainActivity.cs
AvaloniaTest/AvaloniaTest.Browser/: AvaloniaTest.Browser.csproj  Program.cs
AvaloniaTest/AvaloniaTest.Desktop/: AvaloniaTest.Desktop.csproj  Program.cs
AvaloniaTest/AvaloniaTest.iOS/: AppDelegate.cs  AvaloniaTest.iOS.csproj
AvaloniaTest/AvaloniaTest/ViewModels/: MainViewModel.cs  ViewModelBase.cs
AvaloniaTest/AvaloniaTest/Views/: MainView.axaml
CrossPlatformScriptRunner/CrossPlatformScriptRunner/: App.axaml  App.axaml.cs  CrossPlatformScriptRunner.csproj  ViewLocator.cs
CrossPlatformScriptRunner/CrossPlatformScriptRunner.Android/: CrossPlatformScriptRunner.Android.csproj  MainActivity.cs
CrossPlatformScriptRunner/CrossPlatformScriptRunner.Android/Properties/: AndroidManifest.xml
CrossPlatformScriptRunner/CrossPlatformScriptRunner.Browser/: CrossPlatformScriptRunner.Browser.csproj  Program.cs
CrossPlatformScriptRunner/CrossPlatformScriptRunner.Browser/Properties/: launchSettings.json
CrossPlatformScriptRunner/CrossPlatformScriptRunner.Browser/wwwroot/: index.html
CrossPlatformScriptRunner/CrossPlatformScriptRunner.Desktop/: CrossPlatformScriptRunner.Desktop.csproj  Program.cs  app.manifest
CrossPlatformScriptRunner/CrossPlatformScriptRunner.iOS/: AppDelegate.cs  CrossPlatformScriptRunner.iOS.csproj  Info.plist  Main.cs
CrossPlatformScriptRunner/CrossPlatformScriptRunner.iOS/Resources/: LaunchScreen.xib
CrossPlatformScriptRunner/CrossPlatformScriptRunner/ViewModels/: MainViewModel.cs  ViewModelBase.cs
CrossPlatformScriptRunner/CrossPlatformScriptRunner/Views/: MainView.axaml  MainView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs
FuncTester/: Program.cs
ImageProcesser/: ImageProcesser.csproj  Program.cs
LRLPackager/LRLPackager/: App.axaml  App.axaml.cs  LRLPackager.csproj  ViewLocator.cs  WHLP.cs
LRLPackager/LRLPackager.Android/: LRLPackager.Android.csproj  MainActivity.cs
LRLPackager/LRLPackager.Android/Properties/: AndroidManifest.xml
LRLPackager/LRLPackager.Browser/: LRLPackager.Browser.csproj  Program.cs
LRLPackager/LRLPackager.Browser/Properties/: launchSettings.json
LRLPackager/LRLPackager.Browser/wwwroot/: index.html
LRLPackager/LRLPackager.Desktop/: LRLPackager.Desktop.csproj  Program.cs  app.manifest
LRLPackager/LRLPackager.iOS/: AppDelegate.cs  Info.plist  LRLPackager.iOS.csproj  Main.cs
LRLPackager/LRLPackager.iOS/Resources/: LaunchScreen.xib
LRLPackager/LRLPackager/ViewModels/: AddFileViewModel.cs  MainViewModel.cs  ViewModelBase.cs
LRLPackager/LRLPackager/Views/: AddFileView.axaml  AddFileView.axaml.cs  MainView - 副本.axaml.txt  MainView.axaml  MainView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs
Packager/: Program.cs
SEBuilder/: Program.cs
SEBuilder/SECore/: SEBuildCommand.cs  SEBuildManager.cs  SEPlatform.cs  SEPlatformBase.cs  SEProjectInfo.cs
SEBuilder/SEPlatform/: SEPlatformFactory.cs
SEDumper/: DumperC.cs  Program.cs  SEDumper.csproj
SENativeRenderer/: CMakeLists.txt  CMakePresets.json  NRDefine.h  NRExport.h  NRGlobal.c  NRLogger.c  NRRenderData.c  NRShaderCompiler.c  NRShaderSource.h  NRTypedef.h  NRVA.c  NRVec.c  NRVec.h  NRVulkanBasic.c  NRVulkanBuffer.c  NRVulkanCommand.c  NRVulkanPipeline.c  NRVulkanRenderPass.c  NRVulkanShader.c  NRVulkanSwapchain.c  NRVulkanSync.c  NRVulkanUtils.c  NRVulkanUtils.h  NRWindow.c  SENativeRenderer.vcxproj  SENativeRenderer.vcxproj.filters
SENativeRenderer/BasicMetal/: BasicMetal.cpp  BasicMetal.hpp
SEWirelessDebuger/: Program.cs
SaturnEngine/: SaturnEngine.csproj
SaturnEngine/Asset/: BitEditor.cs  Blueprint.cs  DF.cs  GameObject.cs  Image.cs  LRL.cs  SEColor.cs  SEComponent.cs  SEControls.cs  SEFile.cs  SEHuffman.cs  SELanguageManager.cs  SEResource.cs.old  SESpirit.cs  Scene.cs  Styles.cs  Tree.cs  UIScene.cs
SaturnEngine/AvaloniaExport/: SEAvaloniaControl.cs
SaturnEngine/Base/: Game.cs  GameHost.cs  SEBase.cs  iface.cs
SaturnEngine/Global/: GVariables.cs  GlobalScripts.cs.old
SaturnEngine/Management/: SELogger.cs
SaturnEngine/Performance/: Dispatcher.cs  Monitor.cs  SEParallel.cs
SaturnEngine/Physics/: TrigManager.cs
SaturnEngine/Platform/: Global.cs  SECuda.cs  WinAPI.cs
SaturnEngine/Res/: 708566205041628488.lrl  708566205041628488.spk  SEUIGEN.txt  XMLFile1.xml  r.cl  文本.txt
SaturnEngine/SEAudio/: SEAudioManager.cs  SEAudioProvider.cs
SaturnEngine/SEComponents/: Animator.cs  CollisionBox2D.cs  Controller2D.cs  Ground2D.cs  Model3D.cs  Spirit2D.cs
SaturnEngine/SEDevice/: SEDevice.cs  SEKeyboard_WinHook.cs
SaturnEngine/SEErrors/: SEExceptions.cs
SaturnEngine/SEFont/: FMethods.cs
SaturnEngine/SEGraphics/: Render.cs  SE2DOpenGLRender.cs  SE2DSDLRender.cs  SE2DSDLRenderGlfw.cs  SE2DSDLRenderGlfw.cs.cac  SE2DSDLRenderSDL.cs  SEDirectX12Render.cs  SEOpenGLRender.cs  SEVulkanRender.cs  SEWindow.cs  SEWindowAvalonia.cs  SEWindowAvalonia.cs.old  SEWindowGLFW.cs  SEWindowGLFW.cs.old  SEWindowOpenGL.cs  SEWindowSDL.cs  SEWindowSDL.cs.old  SEWindowSilk.cs
SaturnEngine/SEInput/: BasicInput.cs  Input.cs
SaturnEngine/SEMath/: CRC32.cs  FFT.cs  Helper.cs  Point.cs  Polar.cs  SEBorder.cs  SEComplex.cs  SELine.cs  SEMargin.cs  SERect.cs  TRN.cs  Transform.cs  Vector.cs
SaturnEngine/SEUI/: SEUILL.cs  SEUIScript.cs
SaturnEngine/SEUIControls/: SEButton.cs  SELabel.cs  SEPanel.cs
SaturnEngine/ScriptEngine/: SEScriptEngine.cs
SaturnEngine/Security/: IDNT.cs
Windows_Test_Project/: Program.cs  Windows_Test_Project.csproj
Windows_Test_Project/Properties/: launchSettings.json
(+25 files in other folders)
